global/site-files/stylesheet.css
@font-face {
  font-family: 'Open Sans';
  font-style: italic;
  font-weight: 300;
  font-display: swap;
  src: local('Open Sans Light Italic'), local('OpenSans-LightItalic'), url('/global/site-files/fonts/OpenSans-LightItalic.ttf') format('truetype');
}
@font-face {
  font-family: 'Open Sans';
  font-style: italic;
  font-weight: 400;
  font-display: swap;
  src: local('Open Sans Italic'), local('OpenSans-Italic'), url('/global/site-files/fonts/OpenSans-Italic.ttf') format('truetype');
}
@font-face {
  font-family: 'Open Sans';
  font-style: italic;
  font-weight: 600;
  font-display: swap;
  src: local('Open Sans SemiBold Italic'), local('OpenSans-SemiBoldItalic'), url('/global/site-files/fonts/OpenSans-SemiBoldItalic.ttf') format('truetype');
}
@font-face {
  font-family: 'Open Sans';
  font-style: italic;
  font-weight: 700;
  font-display: swap;
  src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url('/global/site-files/fonts/OpenSans-BoldItalic.ttf') format('truetype');
}
@font-face {
  font-family: 'Open Sans';
  font-style: italic;
  font-weight: 800;
  font-display: swap;
  src: local('Open Sans ExtraBold Italic'), local('OpenSans-ExtraBoldItalic'), url('/global/site-files/fonts/OpenSans-ExtraBoldItalic.ttf') format('truetype');
}
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: local('Open Sans Light'), local('OpenSans-Light'), url('/global/site-files/fonts/OpenSans-Light.ttf') format('truetype');
}
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: local('Open Sans Regular'), local('OpenSans-Regular'), url('/global/site-files/fonts/OpenSans-Regular.ttf') format('truetype');
}
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'), url('/global/site-files/fonts/OpenSans-SemiBold.ttf') format('truetype');
}
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: local('Open Sans Bold'), local('OpenSans-Bold'), url('/global/site-files/fonts/OpenSans-Bold.ttf') format('truetype');
}
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 800;
  font-display: swap;
  src: local('Open Sans ExtraBold'), local('OpenSans-ExtraBold'), url('/global/site-files/fonts/OpenSans-ExtraBold.ttf') format('truetype');
}

#site {
 background-color: #e9e9e9;
 color: #161616;
 font-family: 'Open Sans', Tahoma, Sans-Serif;
 display: flex;
 flex-direction: column;
 justify-content: center;
}

#site #header {
 height: 60px;
 width: 100%;
 display: flex;
 justify-content: center;
 align-items: center;
 background-color: #161616;
 color: #e9e9e9;
}

#site #header img {
 height: 50px;
}

#site #header img:hover{
  filter: brightness(1.3);
}

#site #footer {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #161616;
  color: #e9e9e9;
  font-weight: 700;
}

#site #footer ul {
  margin-top: initial;
  margin-bottom: initial;
  padding-inline-start: initial;
}

#site #footer li {
	display: inline-block;
	padding: 10px;
}

#site #footer a {
	color: #e9e9e9;
	text-decoration: none;
}

#site #content {
  width: 95%;
  margin: 0 auto;
}

div.dataTables_wrapper {
  margin: 0 auto;
}

.table-bordered {
  border: 1px solid #161616;
}

.table thead th {
  border-bottom: 2px solid #161616;
}

.table-bordered td, .table-bordered th {
  border: 1px solid #161616;
}

#site #content #personsTable tr {
  cursor: pointer;
}

#site #content #personsTable img {
  height: 100px;
}

#site #content #head-section {
  border-bottom: 5px solid #161616;
  display: flex;
  justify-content: space-between;
}

#site #content #head-section div {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.tab {
  overflow: hidden;
  background-color: #e9e9e9;
}

.tab button {
  background-color: #161616;
  float: left;
  border: none;
  outline: none;
  cursor: pointer;
  padding: 14px 16px;
  transition: 0.3s;
}

.tab button:hover {
  background-color: #e9e9e9;
  color: #161616;
}

.tab button.active {
  background-color: #e9e9e9;
  color: #161616;
}

.tablinks {
  font-size: larger;
  color: #e9e9e9;
}

.tabcontent {
  display: none;
  padding: 6px 12px;
  border-top: none;
}

.grid-container {
  display: grid;
  justify-content: space-evenly;
  grid-template-columns: 50% 50%;
  grid-gap: 10px;
  padding: 10px;
}

.grid-container div {
  display: flex;
  justify-content: center;
  align-items: center;
}

.grid-container img{
  max-height: 900px;
  max-width: 100%;
}

.tabcontent.active {
  display:block;
}

.btn-primary {
  color: #e9e9e9;
  background-color: #161616;
  border-color: #161616;
}

.btn-primary:hover {
  color: #161616;
  background-color: #e9e9e9;
  border-color: #161616;
}

.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
  color: #161616;
  background-color: #e9e9e9;
  border-color: #161616;
}

.btn-primary.focus, .btn-primary:focus {
  color: #161616;
  background-color: #e9e9e9;
  border-color: #161616;
}

.page-item.active .page-link {
  color: #e9e9e9;
  background-color: #161616;
  border-color: #161616;
}

.page-link {
  color: #161616;
  background-color: #e9e9e9;
}

a {
  color: #161616;
}

#site #about-content #about-block {
  max-width: 1000px;
  margin: 20px auto;
  box-shadow: 0px 0px 5px #161616; 
  font-size: 150%;  
  background-color: white;
}

#site #about-content #about-block div {
  padding: 20px; 
  border-bottom: 1px solid #161616
}

#site #about-content #about-block div:first-child img {
  display: inline-block; 
  height: 50px;
  margin-right: 15px; 
  vertical-align: middle; 
}

#site #about-content #about-block div:first-child strong {
  display: inline-block; 
  font-size: 150%;
  vertical-align: middle; 
}

#site #about-content #about-block div a {
  color: #161616;
  text-decoration: none;
}

